Fix #206 Storybook dark mode
Fix illegible text for dark mode in Storybook.

--- a/.storybook/fix.css
+++ b/.storybook/fix.css
@@ -1,7 +1,24 @@
-/* stylelint-disable selector-max-class */
+/* stylelint-disable
+  selector-max-class,
+  declaration-no-important,
+  selector-no-qualifying-type
+*/
 
 .sb-show-main.sb-main-padded {
   display: flex;
   padding: unset;
   margin: 0 auto;
+}
+
+.sb-show-main.sb-main-fullscreen {
+  width: unset;
+  max-width: unset;
+}
+
+.docs-story {
+  background-color: var(--background-color) !important;
+}
+
+select[class^="css-"] {
+  color: var(--text-color);
 }
